Edited comments in HTML

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <title>Work Day Scheduler</title>
   </head>
   <!--
-    Added additional time blocks for each respective time block and assigned them unique <id>'s.
-    Removed classes of 'past', 'present', and 'future' since the JavaScript file conditionally adds each of these classes.
+    Added additional time blocks <div>'s for each respective time block and assigned them unique id's.
+    Removed classes of 'past', 'present', and 'future' since the script.js file conditionally adds each of these classes.
   -->>
   <body>
     <header class="p-5 mb-4 border-5 border-bottom border-dark text-center">
